New Course added training logo change

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="timeline-box ">
                     <div class="timeline-container">
                         <div class="timeline-logo">
-                            <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000030_1550710829_ninjasicon.png">
+                            <img src="https://mywbut.com/logo.png">
                         </div>
                         <h3 class="Trainings-designation  m0 m-blue"> Training on Advanced Java </h3>
                         <h4 class="Trainings-company-name"> MYWBUT </h4>
@@ -222,13 +222,25 @@
                 <div class="timeline-box left ">
                     <div class="timeline-container">
                         <div class="timeline-logo">
-                            <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000030_1550710829_ninjasicon.png">
+                            <img src="https://cdn.freebiesupply.com/logos/large/2x/udemy-1-logo-png-transparent.png">
                         </div>
                         <h3 class="Trainings-designation m0 m-blue"> Data Structures and Algorithm </h3>
                         <h4 class="Trainings-company-name"> Udemy </h4>
                         <h5 class="Trainings-duration m0"> 2018 </h5>
 
                         <p class="Trainings-description text-align-justify"> It was a certification course on Data Structures and algorithm here I learned about Recursion, Array, String, Linked List, Stack, Queue, Binary Tree, Binary Search Tree, AVL Tree, Binary Heap, Trie, Hashing, different types of Sorting, Graphs, Magic Framework, Greedy Algorithms, Devide and Conquer, Dynamic Programming, Runtime and Space Complexity of each of these Data Structures & Algorithms  </p>
+                    </div>
+                </div>
+
+                <div class="timeline-box right ">
+                    <div class="timeline-container">
+                        <div class="timeline-logo">
+                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSEHBdqsmJ-ZVv9E7KxJssyQ6GaAhuCPc8Q7V_f1nbuoSp-AesB&usqp=CAU">
+                        </div>
+                        <h3 class="Trainings-designation  m0 m-blue"> DataBase Management System </h3>
+                        <h4 class="Trainings-company-name"> NPTEL </h4>
+                        <h5 class="Trainings-duration m0"> July 2019 - Nov 2019 </h5>
+                        <p class="Trainings-description text-align-justify"> In this Courese I learned DBMS and SQL queries </p>
                     </div>
                 </div>
 
@@ -277,7 +289,8 @@
                         <h3 class="Trainings-designation  m0 m-blue"> Higher Secondary </h3>
                         <h4 class="Trainings-company-name "> Sonamui FSN High School </h4>
                         <h5 class="Trainings-duration m0"> Apr 2013 - Mar 2015 </h5>
-                        <p class="Trainings-description text-align-justify"> Stream : Pure Science
+                        <p class="Trainings-description text-align-justify"> Stream : Pure Science <br>
+                            Subjects : Math, Physics, Chemistry, English, Bengali <br>
                           <br> Percentage: 71% </p>
                     </div>
                 </div>
@@ -292,11 +305,12 @@
                         <h5 class="Trainings-duration m0"> Jan 2007 - Feb 2013 </h5>
 
                         <p class="Trainings-description text-align-justify"> Stream : General
-                          <br> Percentage: 83%</p>
+                          <br> Subjects : Math, Science, English, Bengali, History, Geography <br>
+                      Percentage: 83%</p>
                     </div>
                 </div> 
                 
-                <div id="timeline-divider">
+                <div id="timeline-divider1">
                     <div class="timeline-traveller">
                         <div>
                             <i class="fas fa-car-side"></i>
