updating latest resume

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <a href="#skills"> Skills </a>
                         </li>
                         <li>
-                            <a href="#Trainings">Trainings</a>
+                            <a href="#Experiences">Experiences</a>
                         </li>
                         <li>
                             <a href="#education">Education</a>
@@ -54,7 +54,7 @@
                     <a href="#skills"> Skills </a>
                 </li>
                 <li>
-                    <a href="#Trainings">Trainings</a>
+                    <a href="#Experiences">Experiences</a>
                 </li>
                 <li>
                     <a href="#education">Education</a>
@@ -117,7 +117,7 @@
             <div id="about-para">
 
                 <p>
-                     To Obtain a position that will allow me to utilize my technical skills, Experiences and knowledge to become a successful professional in the field of IT as an <span class="text-highlight"> Software Developer </span> or <span class="text-highlight">Full Stack Developer </span> and become more responsible and knowledgeable personality and on respectable position in the company.
+                    AWS DevOps Engineer with around <span class="text-highlight">3 years of successful experience</span> in IT Industry in <span class="text-highlight"> AWS DevOps, cloud Migration, implementation, provisioning, operating and maintaining systems</span> running in AWS. Highly experienced in building AWS solutions that has kept enterprises <span class="text-highlight">highly secured, scalable, fault tolerant with reliability.</span> Clear understanding of cloud services, platforms and organization security awareness.
                 </p>
 
             </div>
@@ -137,44 +137,107 @@
             <div class="skills-display">
 
                 <div class="skill-progress">
-                    <div class="sixty-five-percent mb-blue">
+                    <div class="ninety-percent mb-blue">
                         <div class="skill-name">
-                            <span> Java </span>
+                            <span> AWS </span>
                         </div>
                     </div>
                 </div>
                 <div class="skill-progress">
-                    <div class="fifty-five-percent mb-orange">
+                    <div class="eighty-percent mb-orange">
                         <div class="skill-name">
-                            <span> HTML </span>
+                            <span> DevOps </span>
                         </div>
                     </div>
                 </div>
                 <div class="skill-progress">
-                    <div class="fifty-percent mb-light-purple">
+                    <div class="ninety-percent mb-light-purple">
                         <div class="skill-name">
-                            <span> CSS </span>
+                            <span> Terraform </span>
                         </div>
                     </div>
                 </div>
                 <div class="skill-progress">
-                    <div class="forty-percent mb-teal">
+                    <div class="sixty-five-percent mb-teal">
                         <div class="skill-name">
-                            <span> Javascript </span>
+                            <span> Jenkins </span>
                         </div>
                     </div>
                 </div>
                 <div class="skill-progress">
                     <div class="sixty-percent mb-blue">
                         <div class="skill-name">
-                            <span> C </span>
+                            <span> Ansible </span>
                         </div>
                     </div>
                 </div>
                 <div class="skill-progress">
-                    <div class="sixty-five-percent mb-light-purple">
+                    <div class="seventy-percent mb-blue">
                         <div class="skill-name">
-                            <span> SQL </span>
+                            <span> MySQL </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="seventy-percent mb-orange">
+                        <div class="skill-name">
+                            <span> Git </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="seventy-percent mb-light-purple">
+                        <div class="skill-name">
+                            <span> Linux </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="sixty-five-percent mb-teal">
+                        <div class="skill-name">
+                            <span> Node.js </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="seventy-percent mb-blue">
+                        <div class="skill-name">
+                            <span> CI/CD </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-five-percent mb-blue">
+                        <div class="skill-name">
+                            <span> Docker </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="sixty-five-percent mb-orange">
+                        <div class="skill-name">
+                            <span> Bash/Shell Scripting </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="forty-percent mb-light-purple">
+                        <div class="skill-name">
+                            <span> Python </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="forty-percent mb-teal">
+                        <div class="skill-name">
+                            <span> Containers </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="forty-percent mb-blue">
+                        <div class="skill-name">
+                            <span> Containers </span>
                         </div>
                     </div>
                 </div>
@@ -183,13 +246,13 @@
 
         </section>
 
-        <section id="Trainings">
+        <section id="Experiences">
 
             <h1 class="section-heading mb75px">
                 <span>
                     <i class="fas fa-briefcase"></i>
                 </span>
-                <span> Trainings </span>
+                <span> Experiences </span>
             </h1>
 
             <div class="timeline">
@@ -197,50 +260,27 @@
                 <div class="timeline-box ">
                     <div class="timeline-container">
                         <div class="timeline-logo">
-                            <img src="https://mywbut.com/logo.png">
+                            <img src="images/Mindtree.png">
                         </div>
-                        <h3 class="Trainings-designation  m0 m-blue"> Training on Advanced Java </h3>
-                        <h4 class="Trainings-company-name"> MYWBUT </h4>
-                        <h5 class="Trainings-duration m0"> May 2019 - July 2019 </h5>
+                        <h3 class="Experiences-designation  m0 m-blue"> Cloud Engineer - AWS DevOps </h3>
+                        <h4 class="Experiences-company-name"> Mindtree LTD </h4>
+                        <h5 class="Experiences-duration m0"> Mar 2021 - Present </h5>
 
-                        <p class="Trainings-description text-justify"> IT was started from Basic Java and then I learned about Servlet, J2EE, JSP, and Basic of HTML and CSS.. I learned how to build an webpage and connect that with my Database (which was MySQL in my case), how to take user input from web browser etc. </p>
+                        <p class="Experiences-description text-justify"> <b>Project 1 :</b><br>
+                            Responsible for Implementing solution for AWS With a thorough understanding of cloud architecture and cloud platforms, develop, and manage robust, secure, scalable, highly available, and dynamic solutions to drive business objectives. <br> Migrated 330+ Applications, ~3,200 Servers (Physical & VMs ) in 5 phases to AWS on 37+ AWS Accounts under single AWS Organization governance. <br>cut down the cost from $1.7M to $800k per month. <br><br><b>Project 2 :</b><br>
+                            Implemented CICD pipeline to automate the process of creating complete infrastructure to host servers on AWS Automated the process of building and deploying application AMI using terraform. <br>Led the team to troubleshoot all the issues and fixing them. <br>Centralized the process of creating resource to easy modification and reuse using Terraform</p>
                     </div>
                 </div>
                 
                 <div class="timeline-box right ">
                     <div class="timeline-container">
                         <div class="timeline-logo">
-                            <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000030_1550710829_ninjasicon.png">
+                            <img src="images/BullishVentures.png">
                         </div>
-                        <h3 class="Trainings-designation  m0 m-blue"> Full Stack Web Development </h3>
-                        <h4 class="Trainings-company-name"> Coding Ninjas </h4>
-                        <h5 class="Trainings-duration m0"> Jan 2020 - July 2020 </h5>
-                        <p class="Trainings-description text-align-justify"> This is the most inportant and interesting training I have ever done.In this training I learned HTML, CSS, FORMS, FLEX, Responsive Design, Basic Bootstrap, JavaScript, (yet to learn: Basic of JQuery, Promises,Ajax, NodeJS and MongoDB ) </p>
-                    </div>
-                </div>
-
-                <div class="timeline-box left ">
-                    <div class="timeline-container">
-                        <div class="timeline-logo">
-                            <img src="https://cdn.freebiesupply.com/logos/large/2x/udemy-1-logo-png-transparent.png">
-                        </div>
-                        <h3 class="Trainings-designation m0 m-blue"> Data Structures and Algorithm </h3>
-                        <h4 class="Trainings-company-name"> Udemy </h4>
-                        <h5 class="Trainings-duration m0"> 2018 </h5>
-
-                        <p class="Trainings-description text-align-justify"> It was a certification course on Data Structures and algorithm here I learned about Recursion, Array, String, Linked List, Stack, Queue, Binary Tree, Binary Search Tree, AVL Tree, Binary Heap, Trie, Hashing, different types of Sorting, Graphs, Magic Framework, Greedy Algorithms, Devide and Conquer, Dynamic Programming, Runtime and Space Complexity of each of these Data Structures & Algorithms  </p>
-                    </div>
-                </div>
-
-                <div class="timeline-box right ">
-                    <div class="timeline-container">
-                        <div class="timeline-logo">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSEHBdqsmJ-ZVv9E7KxJssyQ6GaAhuCPc8Q7V_f1nbuoSp-AesB&usqp=CAU">
-                        </div>
-                        <h3 class="Trainings-designation  m0 m-blue"> DataBase Management System </h3>
-                        <h4 class="Trainings-company-name"> NPTEL </h4>
-                        <h5 class="Trainings-duration m0"> July 2019 - Nov 2019 </h5>
-                        <p class="Trainings-description text-align-justify"> In this Courese I learned DBMS and SQL queries </p>
+                        <h3 class="Experiences-designation  m0 m-blue"> Software Developer </h3>
+                        <h4 class="Experiences-company-name"> Bullish Ventures LLP </h4>
+                        <h5 class="Experiences-duration m0"> Sept 2020 - Jan 2021 </h5>
+                        <p class="Experiences-description text-align-justify"> Built an entire fullstack website named Propshots using MERN STACK(Node.js, Express.js, MongoDB and React).<br> led the team to build the entire backend system including the APIs, user verification and authentication system </p>
                     </div>
                 </div>
 
@@ -270,13 +310,13 @@
                 <div class="timeline-box left ">
                     <div class="timeline-container">
                         <div class="timeline-logo">
-                            <img src="https://www.mywbut.com/admissionfair/upload/3273ed149430aeca8a5a4f23e3a55580.png">
+                            <img src="images/HIT-Haldia.png">
                         </div>
-                        <h3 class="Trainings-designation  m0 m-blue"> B.Tech </h3>
-                        <h4 class="Trainings-company-name "> Haldia Institute of Technology </h4>
-                        <h5 class="Trainings-duration m0"> July 2016 - June 2020 </h5>
+                        <h3 class="Experiences-designation  m0 m-blue"> B.Tech </h3>
+                        <h4 class="Experiences-company-name "> Haldia Institute of Technology </h4>
+                        <h5 class="Experiences-duration m0"> July 2016 - June 2020 </h5>
 
-                        <p class="Trainings-description text-align-justify"> Stream : Computer Science and Engineering
+                        <p class="Experiences-description text-align-justify"> Stream : Computer Science and Engineering
                         <br> University Roll No: 10300116025  <br> CGPA: 7.2</p>
                     </div>
                 </div>
@@ -286,10 +326,10 @@
                         <div class="timeline-logo">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/WBBSE_LOGO.png/220px-WBBSE_LOGO.png">
                         </div>
-                        <h3 class="Trainings-designation  m0 m-blue"> Higher Secondary </h3>
-                        <h4 class="Trainings-company-name "> Sonamui FSN High School </h4>
-                        <h5 class="Trainings-duration m0"> Apr 2013 - Mar 2015 </h5>
-                        <p class="Trainings-description text-align-justify"> Stream : Pure Science <br>
+                        <h3 class="Experiences-designation  m0 m-blue"> Higher Secondary </h3>
+                        <h4 class="Experiences-company-name "> Sonamui FSN High School </h4>
+                        <h5 class="Experiences-duration m0"> Apr 2013 - Mar 2015 </h5>
+                        <p class="Experiences-description text-align-justify"> Stream : Pure Science <br>
                             Subjects : Math, Physics, Chemistry, English, Bengali <br>
                           <br> Percentage: 71% </p>
                     </div>
@@ -300,11 +340,11 @@
                         <div class="timeline-logo">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/WBBSE_LOGO.png">
                         </div>
-                        <h3 class="Trainings-designation  m0 m-blue"> Secondary </h3>
-                        <h4 class="Trainings-company-name "> Shiberhan High School </h4>
-                        <h5 class="Trainings-duration m0"> Jan 2007 - Feb 2013 </h5>
+                        <h3 class="Experiences-designation  m0 m-blue"> Secondary </h3>
+                        <h4 class="Experiences-company-name "> Shiberhan High School </h4>
+                        <h5 class="Experiences-duration m0"> Jan 2007 - Feb 2013 </h5>
 
-                        <p class="Trainings-description text-align-justify"> Stream : General
+                        <p class="Experiences-description text-align-justify"> Stream : General
                           <br> Subjects : Math, Science, English, Bengali, History, Geography <br>
                       Percentage: 83%</p>
                     </div>
