--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="timeline-box right ">
                     <div class="timeline-container">
                         <div class="timeline-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/WBBSE_LOGO.png/220px-WBBSE_LOGO.png">
+                            <img src="images/WBCHSE.png">
                         </div>
                         <h3 class="Experiences-designation  m0 m-blue"> Higher Secondary </h3>
                         <h4 class="Experiences-company-name "> Sonamui FSN High School </h4>
@@ -338,7 +338,7 @@
                 <div class="timeline-box left ">
                     <div class="timeline-container">
                         <div class="timeline-logo">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/WBBSE_LOGO.png">
+                            <img src="images/WBBSE.png">
                         </div>
                         <h3 class="Experiences-designation  m0 m-blue"> Secondary </h3>
                         <h4 class="Experiences-company-name "> Shiberhan High School </h4>
