--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 <span>
                     <i class="fas fa-th-list"></i>
                 </span>
-                <span> Portfolio </span>
+                <span> Portfolio & Downloadable Resume</span>
             </h1>
 
             <div id="portfolio-container">
@@ -393,14 +393,9 @@
 
                 </div>
                 <div class="portfolio-image-container">
-                    <img src="images/SuvenduResume.png">
-                    <div class="portfolio-details">
-                        <p>
-                         Resume Project<br>
-                         It's My Resume Which is built using HTML and CSS
-
-                        </p>
-                    </div>
+                    <object data="data/SuvenduResume.pdf" type="application/pdf" width="100%" height="500px">
+                        <p>Unable to display PDF file. <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">Download</a> instead.</p>
+                    </object>
 
                 </div>
                 <div class="portfolio-image-container">
